--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,19 +1,5 @@
 <div id="home" class="container-fluid">
-	<h1>Application Settings & Labels</h1>
+	<h1>Salesforce Heroku Connect PoC</h1>
 	<hr />
-	<div id="buttonPanel" class="row">
-		<div class="col-md-2"></div>
-		<div class="col-md-4 button-container">
-			<div class="center-block button-item">
-				<a href="/settings/view" class="btn btn-primary btn-xlarge text-center"><i class="fa fa-3x fa-cogs" aria-hidden="true"></i><br/><span class="button-text">Settings</span></a>
-			</div>
-		</div>
-		<div class="col-md-4 button-container">
-			<div class="center-block button-item">
-				<a href="/labels/view" class="btn btn-success btn-xlarge text-center"><i class="fa fa-3x fa-tags" aria-hidden="true"></i><br/><span class="button-text">Labels</span></a>
-			</div>
-		</div>
-		<div class="col-md-2"></div>
-	</div>
 </div>
 <script type="text/javascript" src="/js/index.js"></script>
