--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -66,8 +66,8 @@
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
 						<li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
-						<li><a href="/customer/">Customers</a></li>
-						<li><a href="/streamObject/">Stream Object</a></li>
+						<li><a href="/customer/view">Customers</a></li>
+						<li><a href="/streamObject/view">Stream Object</a></li>
 					</ul>
 				</div>
 			</div>
