Master-Detail test

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -68,6 +68,7 @@
 						<li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
 						<li><a href="/customer/view">Customers</a></li>
 						<li><a href="/streamObject/view">Stream Object</a></li>
+						<li><a href="/masterDetail/view">Master-Detail</a></li>
 					</ul>
 				</div>
 			</div>
