--- a/views/customer.hbs
+++ b/views/customer.hbs
@@ -45,8 +45,7 @@
 						<div class="help-block with-errors"></div>
 					</div>
 					<div class="form-group">
-						<label class="control-label">Email</label> <input type="email" class="form-control" id="customerEmail" value="" name="customerEmail"
-							required>
+						<label class="control-label">Email</label> <input type="email" class="form-control" id="customerEmail" value="" name="customerEmail">
 						<div class="help-block with-errors"></div>
 					</div>
 					<div class="form-group">
@@ -54,7 +53,7 @@
 						<div class="help-block with-errors"></div>
 					</div>
 					<div class="form-group">
-						<label class="control-label">Mobile</label> <input type="tel" class="form-control" id="customerMobile" value="" name="customerMobile" required>
+						<label class="control-label">Mobile</label> <input type="tel" class="form-control" id="customerMobile" value="" name="customerMobile">
 						<div class="help-block with-errors"></div>
 					</div>
 					<input type="hidden" class="form-control" id="customerGuid" value="">
