--- a/views/masterDetail.hbs
+++ b/views/masterDetail.hbs
@@ -2,6 +2,11 @@
 <hr />
 <button type="button" class="btn btn-default" aria-label="Left Align" data-toggle="modal" data-target="#newMasterDetailObject" id="createMasterDetailObject">New Master Detail Object</button>
 <br/><br/>
+<div id="home" class="container-fluid">
+	<h3>Master Data</h3>
+	<hr />
+</div>
+<br/>
 <div class="row">
 	<div class="col-md-12">
 		<table id="masters" class="table table-hover table-striped table-bordered display responsive nowrap" cellspacing="0"
@@ -20,6 +25,11 @@
 	</div>
 </div>
 <br />
+<div id="home" class="container-fluid">
+	<h3>Detail Data</h3>
+	<hr />
+</div>
+<br/>
 <div class="row">
 	<div class="col-md-12">
 		<table id="details" class="table table-hover table-striped table-bordered display responsive nowrap" cellspacing="0"
@@ -43,9 +53,7 @@
 <div id="home" class="container-fluid">
 	<h4>Detail records will be inserted automatically</h4>
 </div>
-<br />
-<br />
-<br />
+<br /><br /><br />
 <div class="row">
 	<div class="col-md-2 col-md-offset-11">
 		<p>
